Use Java 8 in build.sbt